--- a/docs/3. Arduino 教程/3. Arduino 教程.md
+++ b/docs/3. Arduino 教程/3. Arduino 教程.md
@@ -2349,10 +2349,6 @@ void loop() {
 }
 ```
 
-ESP32主板通过USB线连接到计算机后开始上传代码。为了避免将代码上传至ESP32主板时出现错误，必须选择与计算机连接正确的控制板和串行端口。
-
-注意：将ESP32主板通过USB线连接到计算机后才能看到对应的串行端口。
-
 ---
 
 1.7 代码说明
@@ -5201,7 +5197,7 @@ void loop() {
 | ------------------------ | ------------------------ | ------------------------ | ---------------------------- |
 | ESP32 Plus主板 x1        | Keyes 130电机模块 x1     | Keyes 火焰传感器 x1      | XH2.54-4P 转杜邦线母单线  x2 |
 | ![img](./media/USB.jpg)       | ![img](./media/OR0266.png)    | ![img](./media/6.png)         |                              |
-| USB线  x1                | 6节5号电池盒  x1         | 5号电池**(自备)**  x6    |                              |
+| USB线  x1                | 6节5号电池盒  x1         | 5号电池(自备)  x6    |                              |
 
 ---
 
