--- a/docs/4. MicroPython 教程/4. MicroPython教程.md
+++ b/docs/4. MicroPython 教程/4. MicroPython教程.md
@@ -3,7 +3,7 @@
 
 ## 一、下载代码
 
-请先下载本套件需要用到的所有：[代码文件](../程序代码.zip)，保存至您方便使用的路径下。
+请先下载本套件需要用到的所有：[代码文件](./程序代码.zip)，保存至您方便使用的路径下。
 
 本项目中使用的代码保存在文件夹“**..\程序代码\Python_代码**”中，你可以将代码移至任何你方便使用的地方。**本MicroPython课程的所有实验都是以将代码文件夹移动到（D:）盘中为例的**，命名为 **<span style="color: rgb(255, 76, 65);">代码</span>**，移动后路径为“**<span style="color: rgb(255, 76, 65);">D:\代码</span>**”。
 
